@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't display in detail functions, but in higher level.
+Nicolas Weeger 2010-07-14
+
 Enable knowledge filter, with additional parameter to 'knowledge list'.
 Nicolas Weeger 2010-07-14
 
